# lockd

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  default.cfg  lockctl.1  lockd.1
src/: .lockscreen.rs.swp  api.rs  config.rs  control.rs  daemon.rs  dpms.rs  ffi.rs  inhibit.rs  lockscreen.rs  msg.rs  react.rs
