[package]
name = "lockd"
version = "0.1.0"
authors = [
	"Kilobyte22 <stiepen22@gmx.de>",
	"Dean Davis <dean4devil@paranoidlabs.org>"
]
build = "build.rs"

[dependencies]
dbus = "0.3"
libc = "0.2"
config-parser = "0.1"

[[bin]]
name = "lockd"
path = "src/daemon.rs"

[[bin]]
name = "lockctl"
path = "src/control.rs"
